--- a/travel-companion-frontend/package.json
+++ b/travel-companion-frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "bulma": "^0.9.4",
+    "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
